--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "gsap": "^3.7.1",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vue-toastification": "^1.7.11",
     "vuex": "^3.6.2"
