--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "gsap": "^3.7.1",
     "serve-static": "^1.14.1",
+    "simple-keyboard": "^3.2.67",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
