--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "gsap": "^3.7.1",
     "vue": "^2.6.11",
+    "vue-fullpage.js": "^0.1.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
