--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
-    "comlink": "^4.3.1",
     "core-js": "^3.6.5",
     "gsap": "^3.7.1",
     "vue": "^2.6.11",
+    "vue-agile": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
